# Rtmp

./: .gitignore  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/me/xujichang/rtmp/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
rtmp-lib/: CMakeLists.txt  build.gradle
rtmp-lib/source/AnyCore/: RtmpHoster.h  RtmpHosterImpl.cc  RtmpHosterImpl.h
rtmp-lib/source/webrtc/: CMakeLists.txt
rtmp-lib/source/webrtc/base/java/src/org/webrtc/: Logging.java  Size.java  ThreadUtils.java
rtmp-lib/source/webrtc/modules/audio_device/android/java/src/org/webrtc/voiceengine/: BuildInfo.java  WebRtcAudioEffects.java  WebRtcAudioManager.java  WebRtcAudioRecord.java  WebRtcAudioTrack.java  WebRtcAudioUtils.java
rtmp-lib/src/main/: AndroidManifest.xml
rtmp-lib/src/main/cpp/: native-lib.cpp
rtmp-lib/src/main/res/values/: strings.xml
rtmplib/: build.gradle
rtmplib/src/main/: AndroidManifest.xml
rtmplib/src/main/java/org/anyrtc/anyrtmp/: HosterActivity.java  TestActivity.java
rtmplib/src/main/java/org/anyrtc/core/: RTMPHosterKit.java
rtmplib/src/main/java/org/webrtc/: EglBase10.java  EglBase14.java
rtmplib/src/main/res/layout/: activity_guest.xml  activity_test.xml
rtmplib/src/main/res/values/: strings.xml
